# Desafio_Inoa

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  conftest.py  docker-compose.yaml  dockerfile  pyproject.toml
backend/adapters/b3/: __init__.py  brapi.py  brapi_mock.py  typing.py
backend/adapters/email/: __init__.py  django_smtp.py  mailgun.py  sendgrid.py  typing.py
backend/auth/: tests.py  urls.py  views.py
backend/auth_user/: models.py  tests.py  views.py
backend/auth_user/migrations/: 0001_initial.py
backend/backend/: __init__.py  celery_settings.py  periodic_tasks.py  settings.py  task.py  urls.py
backend/core/: models.py  tasks.py  tests.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_remove_asset_interval_remove_asset_start_date_and_more.py  0003_alter_asset_long_name_alter_asset_name_and_more.py  0004_alter_asset_symbol_alter_assetrecord_measured_at.py  0005_useralert_last_checked.py  0006_alter_useralert_last_checked.py  0007_alter_assetrecord_options.py
backend/user_auth/: models.py  urls.py  views.py
front/: index.html  package-lock.json  package.json  tsconfig.json
front/src/: main.tsx  router.tsx
front/src/components/: snack-bar.tsx
front/src/context/: auth-context.tsx  snack-context.tsx
front/src/libs/: decimal_svc.ts
front/src/libs/data_types/: data.ts
front/src/login/: login-page.tsx
front/src/middleware/: auth-guard-middleware.tsx
front/src/pages/asset/: asset-page.tsx
front/src/pages/home/: alerts-table.tsx  home-page.tsx
front/src/pages/login/: login-page.tsx
